# process-launcher

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: launcher.example.yaml
docs/: prd.md  rfc.md  test.md  working.md
scripts/: smoke_test.py  start.sh
skills/: skill_process_launcher.md
src/process_launcher/: cli.py  config.py  log.py  models.py  periodic.py  process.py  scheduled.py  server.py  service_monitor.py  storage.py
tests/: conftest.py  test_api.py  test_api_logs.py  test_config.py  test_integration.py  test_live.py  test_log.py  test_periodic.py  test_process.py  test_scheduled_recover.py  test_service_monitor.py  test_storage.py
